// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Dimmer Colore Primario 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="mt-3 fade"
      >
        <div
          className="dimmer dimmer-primary"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="dimmer-inner"
          >
            <div
              className="dimmer-icon"
            >
              <svg
                className="icon"
              >
                <use
                  xlinkHref="sprite.svg#it-unlocked"
                />
              </svg>
            </div>
            <p>
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </p>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12 col-lg-4"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12 col-lg-4 d-none d-lg-block"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12 col-lg-4 d-none d-lg-block"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dimmer Dimmer con Azioni 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="mt-3 fade"
      >
        <div
          className="dimmer"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="dimmer-inner"
          >
            <div
              className="dimmer-icon"
            >
              <svg
                className="icon"
              >
                <use
                  xlinkHref="sprite.svg#it-unlocked"
                />
              </svg>
            </div>
            <h4>
              Titolo Dimmer
            </h4>
            <div
              className="dimmer-buttons bg-dark"
            >
              <button
                aria-label={null}
                className="btn btn-outline-primary"
                onClick={[Function]}
              >
                Azione secondaria
              </button>
              <button
                aria-label={null}
                className="btn btn-primary"
                onClick={[Function]}
              >
                Azione primaria
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="col-12 col-lg-4"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12 col-lg-4 d-none d-lg-block"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dimmer Dimmer con Azioni Colore Primario 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="mt-3 fade"
      >
        <div
          className="dimmer dimmer-primary"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="dimmer-inner"
          >
            <div
              className="dimmer-icon"
            >
              <svg
                className="icon"
              >
                <use
                  xlinkHref="sprite.svg#it-unlocked"
                />
              </svg>
            </div>
            <h4>
              Titolo Dimmer
            </h4>
            <div
              className="dimmer-buttons single-button bg-dark"
            >
              <button
                aria-label={null}
                className="btn btn-primary"
                onClick={[Function]}
              >
                Azione primaria
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <div
          className="col-12 col-lg-4"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12 col-lg-4 d-none d-lg-block"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Dimmer Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div>
      <div
        className="mt-3 fade"
      >
        <div
          className="dimmer"
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            className="dimmer-inner"
          >
            <div
              className="dimmer-icon"
            >
              <svg
                className="icon"
              >
                <use
                  xlinkHref="sprite.svg#it-unlocked"
                />
              </svg>
            </div>
            <p>
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </p>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-12 col-lg-4"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12 col-lg-4 d-none d-lg-block"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12 col-lg-4 d-none d-lg-block"
        >
          <div
            className="card-wrapper"
          >
            <div
              className="card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…
                </div>
                <p
                  className="card-text"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
